# DoctorScheduling

./: PKG-INFO  README.md  pyproject.toml
doctorscheduling/: main.py  tool.py
