[tool.poetry]
name = "DoctorScheduling"
version = "0.1.1"
description = ""
authors = ["Kotaro SONODA <kotaro1976@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^0.20.16"
numpy = "^1.26.4"
ortools = "^9.9.3963"
pulp = "^2.8.0"
pandas = "^2.2.2"
jpholiday = "^0.1.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
